--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/set_time_item"
+        android:title="@string/set_time"
+        />
+
+    <item
         android:id="@+id/clear_data"
-        android:title="@string/clear_data"/>
+        android:title="@string/clear_data"
+        />
 </menu>
