--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#801E90FF</color>
+    <color name="colorPrimaryDark">#1E90FF</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="course1">#85bca3ef</color>
-    <color name="course2">#85efd6a3</color>
-    <color name="course3">#85a3e2ef</color>
+    <color name="course1">#55beedc7</color>
+    <color name="course2">#8519caad</color>
+    <color name="course3">#858cd4be</color>
+    <color name="course4">#85adeee1</color>
+    <color name="course5">#85bee7e9</color>
     <color name="black">#000000</color>
     <color name="blue">#2c4fce</color>
     <color name="confirm_button">#8be1f9</color>
