--- a/app/src/main/res/layout/single_text_set.xml
+++ b/app/src/main/res/layout/single_text_set.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/time_set_hint"
+        android:id="@+id/text_set_hint"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
@@ -16,17 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:id="@+id/time_set_value"
+        android:id="@+id/text_set_value"
         android:textSize="20sp"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+         app:layout_constraintTop_toTopOf="parent"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
